# Lab3CG

./: CMakeLists.txt  README.md  vcpkg.json
src/: FuncWidget.cpp  FuncWidget.h  LogicalOperations.cpp  LogicalOperations.h  MainWindow.cpp  MainWindow.h  main.cpp
